--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@astrojs/tailwind": "^2.1.2",
     "animate.css": "^4.1.1",
     "astro": "^1.6.6",
-    "astro-themes": "^0.2.3",
+    "astro-color-scheme": "^1.0.1",
+    "astro-icon": "^0.8.0",
     "tailwindcss": "^3.0.24",
     "typewriter-effect": "^2.19.0"
   }
