--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.3",
     "@astrojs/tailwind": "^2.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "animate.css": "^4.1.1",
     "astro": "^1.6.6",
     "astro-color-scheme": "^1.0.1",
+    "astro-compress": "^2.0.15",
     "astro-icon": "^0.8.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^3.0.24",
     "typewriter-effect": "^2.19.0"
   }
