--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@namhong2001/react-textfit": "^2.0.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "animate.css": "^4.1.1",
@@ -26,7 +27,6 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-simple-typewriter": "^5.0.1",
-    "tailwindcss": "^3.0.24",
-    "typewriter-effect": "^2.19.0"
+    "tailwindcss": "^3.0.24"
   }
 }
